tests/baselines/reference/es6modulekindWithES5Target9.errors.txt
tests/cases/compiler/es6modulekindWithES5Target9.ts(2,15): error TS2307: Cannot find module 'mod'.
tests/cases/compiler/es6modulekindWithES5Target9.ts(4,17): error TS2307: Cannot find module 'mod'.
tests/cases/compiler/es6modulekindWithES5Target9.ts(6,20): error TS2307: Cannot find module 'mod'.
tests/cases/compiler/es6modulekindWithES5Target9.ts(14,15): error TS2307: Cannot find module 'mod'.
tests/cases/compiler/es6modulekindWithES5Target9.ts(16,17): error TS2307: Cannot find module 'mod'.


==== tests/cases/compiler/es6modulekindWithES5Target9.ts (5 errors) ====
    
    import d from "mod";
                  ~~~~~
!!! error TS2307: Cannot find module 'mod'.
    
    import {a} from "mod";
                    ~~~~~
!!! error TS2307: Cannot find module 'mod'.
    
    import * as M from "mod";
                       ~~~~~
!!! error TS2307: Cannot find module 'mod'.
    
    export {a};
    
    export {M};
    
    export {d};
    
    export * from "mod";
                  ~~~~~
!!! error TS2307: Cannot find module 'mod'.
    
    export {b} from "mod"
                    ~~~~~
!!! error TS2307: Cannot find module 'mod'.
    
    export default d;
    